Issue 2604 Twenty Nineteen Backend Container Alignment (#2609)
* Issue 2604 Twenty Nineteen Backend Container Alignment

- Twenty Nineteen was adding a weird left value for the container. Made it auto.
- Tested if changing container position work from the transform option, and it does. Also it works on other themes.
- Twenty Twenty Two has a similar issue. Should I also fix it here, or in a new PR?

* Twenty Twenty Two container alignment

- Twenty Twenty Two had the container aligned to the left, that's why I had to add the margin.
- It also adds container padding, so added padding: 0 for it;  5px for the wrapper exists on other themes, but not this one.

* Removed the important where possible

- Updated 2/3 CSS blocks. The first one already uses the important rule, so only way to override it is to have another important rule added. Nothing we can do here.

--- a/src/css/maxi-themes-banner.scss
+++ b/src/css/maxi-themes-banner.scss
@@ -42,3 +42,19 @@ body.maxi-blocks--active .maxi-button-block__button {
 	border: none;
 	text-decoration: none;
 }
+
+/*Fixes container alignment for Twenty Nineteen*/
+body.maxi-blocks--active .maxi-container-block.wp-block.maxi-block.maxi-block--backend {
+	left: auto;
+}
+
+/*Fixes container alignment for Twenty Twenty Two*/
+body.maxi-blocks--active #wpcontent .block-editor-block-list__layout.is-root-container .maxi-block[data-align="full"] {
+	margin: 0 auto !important;
+}
+body.maxi-blocks--active #wpcontent .is-root-container {
+	padding: 0;
+}
+body.maxi-blocks--active #wpcontent .editor-styles-wrapper {
+	padding: 5px;
+}
